2005-01-16 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>			 
	 * FIX 'Dictionnary' is now spelt 'Dictionary'
	       'wether' is now spelt 'whether'
			 'archieve' is now spelt 'archive'   ;-)

2005-01-15 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
    * ADD DicomDir, DicomDirPatient, DicomDirStudy, DicomDirSerie, DicomDirImage
	       related methods, in order not to expose internal mechanisms
        InitTraversal();
        GetNextEntry();			     	 
	 * REM methods that exposed internal mechanisms :
        DicomDir::GetDicomDirPatients()
        DicomDirPatient::GetDicomDirStudies()
        DicomDirStudy::GetDicomDirSeries()
        DicomDirSerie::GetDicomDirImages()
	 * UPD Test programs :
	     makeDicomDir.cxx
	     BuildUpDicomDir.cxx
	     TestDicomDir.cxx
	  * UPD Example program
	     PrintDicomDir.cxx
    * ADD DictSet methods
        InitTraversal()
        GetNextEntry()

2005-01-15 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Removed the Print/indent/default parameter mess. There is absolutely no
	 reason to have to methods, moreover with the second takeing the ostream as
	 *SECOND* parameter. This was clearly a bad hack to get things compile.

2005-01-15 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Complete rewrite of the GetMacAddress code. Now the code is *much*
	 smaller (no more MacOSX specific crap). A lot more POSIX oriented.
	 Unfortunately the main code does not work on SunOS, thus provide a specific
	 code for this platform only (and Win32 of course). Since this seems to be
	 working, change CreateUniqueUID to use GetMACAddress instead of the
	 problematic getIPAddress

2005-01-14 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Unfortunately to be able to test gdcmDirList I had to break the API
     a little. Now the class is not a std::list anymore but has a member
     std::vector (more ITK compatible). Allow unit testing on Win32 and
     shared libs.
